# HtmlGrapheasKamva

./: .gitmodules  CMakeLists.txt  README.md  build.gradle
cmake/: build_agg.cmake  build_dirent.cmake  build_expat.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_stlcache.cmake  build_wxwidgets.cmake
cmake/libcmaker/: build_dirent.cmake  build_fontconfig.cmake  build_freetype_with_harfbuzz.cmake  build_googletest.cmake  build_icu.cmake  build_icu_host_tools.cmake
host_tools/: CMakeLists.txt
platform/android/androidTest/java/ru/feographia/htmlgrapheaskamva/: ExampleInstrumentedTest.java
platform/android/main/cpp/: CMakeLists.txt
platform/android/main/cpp/src/hgkamva/platform/android/: HgKamvaApiJni.cpp  HtmlGrapheasKamvaAndroid.cpp
platform/android/main/java/ru/feographia/htmlgrapheaskamva/: DrawOnBitmapLoader.java  HtmlGrapheasView.java
platform/android/main/java/ru/feographia/htmlgrapheaskamva/hgkamva_api/: HgKamvaApiJni.java
platform/android/main/java/ru/feographia/htmlgrapheaskamva/hgkamva_api/codes/: hgLitehtmlMediaType.java  hgPixelFormatId.java
platform/android/main/java/ru/htmlgrapheas/htmlgrapheaskamva/: DrawOnBitmapLoader.java  HtmlGrapheasView.java
platform/android/main/java/ru/htmlgrapheas/htmlgrapheaskamva/hgkamva_api/: HgKamvaApiJni.java
platform/wxwidgets/: CMakeLists.txt
platform/wxwidgets/src/hgkamva/platform/wxwidgets/: HgKamvaWxWindow.cpp  HgKamvaWxWindow.h  wxPixelFormatToHgHtmlRenderer.h
src/hgk/: dummy.cpp
src/hgk/platform/android/androidTest/java/ru/feographia/htmlgrapheas/: ExampleInstrumentedTest.java
src/hgk/platform/android/main/: AndroidManifest.xml
src/hgk/platform/android/main/cpp/HtmlGrapheasKamvaAndroid/: CMakeLists.txt  HtmlGrapheasKamvaAndroid.cpp  HtmlGrapheasKamvaAndroid.h
src/hgk/platform/android/main/cpp/grapheaskamva/: CMakeLists.txt  HtmlGrapheasKamvaAndroid.cpp  HtmlGrapheasKamvaAndroidJni.cpp  agg_freetype_harfbuzz.h
src/hgk/platform/android/main/java/ru/feographia/htmlgrapheas/: HtmlGrapheasKamvaAndroidJni.java  HtmlGrapheasView.java
src/hgk/platform/android/main/res/values/: strings.xml
src/hgk/platform/android/test/java/ru/feographia/htmlgrapheas/: ExampleUnitTest.java
src/hgk/platform/wxwidgets/HtmlGrapheasKamvaWx/: CMakeLists.txt  HtmlGrapheasKamvaWx.cpp  HtmlGrapheasKamvaWx.h  PixelFormatConvertor.h
src/hgk/platform/wxwidgets/grapheaskamva/: CMakeLists.txt  HtmlGrapheasKamvaWx.cpp  HtmlGrapheasKamvaWx.h
src/hgkamva/: agg_freetype_harfbuzz.h  hg_kamva_api.cpp  hg_kamva_api.h  hg_kamva_codes.h
src/hgkamva/agg/: hg_agg_kamva_api.cpp
src/hgkamva/agg/container/: HgAggPainter_test.cpp  HgContainer_test.cpp  HgFont_test.cpp
src/hgkamva/agg/renderer/: HgAggHtmlRenderer.h  HgAggHtmlRenderer_test.cpp
src/hgkamva/cairo/: hg_cairo_kamva_api.cpp
src/hgkamva/cairo/container/: HgCairoPainter.h  HgCairoPainter_test.cpp  HgContainer_test.cpp  HgFont_test.cpp
src/hgkamva/cairo/renderer/: HgCairoHtmlRenderer.h  HgCairoHtmlRenderer_test.cpp
src/hgkamva/container/: CairoHolder.cpp  CairoHolder.h  CairoWrapper.cpp  CairoWrapper.h  HgAggHtmlRenderer.h  HgAggHtmlRenderer_test.cpp  HgAggIdToAggPixelFormat.h  HgAggPaint.h  HgAggPainter.h  HgAggRenderer.h  HgCairo.cpp  HgCairo.h  HgCairoPainter.cpp  HgCairoPainter.h  HgCairoPainter_test.cpp  HgContainer.cpp  HgContainer.h  HgContainer_test.cpp  HgFont.cpp  HgFont.h  HgFontLibrary.cpp  HgFontLibrary.h  HgFontLibrary_test.cpp  HgFont_test.cpp  HgHtmlRenderer.cpp  HgHtmlRenderer.h  HgPaint.cpp  HgPaint.h  HgPainter.cpp  HgPainter.h  HgRenderer.cpp  HgRenderer.h
src/hgkamva/container/@_cp/: HgContainer.cpp  HgContainer.h  HgContainer_test.cpp  HgFont.cpp  HgFont.h
src/hgkamva/container/agg_c/: agg_container_c.cpp  agg_container_c.h  agg_font.cpp  agg_font.h
src/hgkamva/container/agg_l/: agg_container_l.cpp  agg_container_l.h
src/hgkamva/platform/android/androidTest/java/ru/feographia/htmlgrapheas/: ExampleInstrumentedTest.java
src/hgkamva/platform/android/main/: AndroidManifest.xml
src/hgkamva/platform/android/main/cpp/HtmlGrapheasKamvaAndroid/: CMakeLists.txt  HgKamvaApiJni.cpp  HtmlGrapheasKamvaAndroid.cpp  HtmlGrapheasKamvaAndroid.h  HtmlGrapheasKamvaAndroidJni.cpp
src/hgkamva/platform/android/main/java/ru/feographia/htmlgrapheas/: HtmlGrapheasKamvaAndroidJni.java
src/hgkamva/platform/android/main/java/ru/feographia/htmlgrapheaskamva/: DrawOnBitmapLoader.java  HtmlGrapheasKamvaAndroidJni.java  HtmlGrapheasView.java
src/hgkamva/platform/android/main/java/ru/feographia/htmlgrapheaskamva/hgkamva_api/: HgKamvaApiJni.java
src/hgkamva/platform/android/test/java/ru/feographia/htmlgrapheas/: ExampleUnitTest.java
src/hgkamva/platform/android/test/java/ru/feographia/htmlgrapheaskamva/: ExampleUnitTest.java
src/hgkamva/platform/wxwidgets/: CMakeLists.txt  HgKamvaWxWindow.cpp  HgKamvaWxWindow.h  HtmlGrapheasKamvaWx.cpp  HtmlGrapheasKamvaWx.h  PixelFormatConvertor.h  wxPixelFormatToId.h
src/hgkamva/renderer/: HgCairoHtmlRenderer.cpp  HgCairoHtmlRenderer_test.cpp  HgHtmlRenderer.cpp  HgHtmlRenderer.h  HgHtmlRenderer_test.cpp
src/hgkamva/util/: FileUtil.cpp  FileUtil.h  Filesystem.h  StringUtil.cpp  StringUtil.h  StringUtil_test.cpp
test/: CMakeLists.txt
test/data/: HgContainer_1.ppm  HgContainer_2.ppm  HgFontTest_1.ppm  HgFontTest_2.ppm  HtmlDocument_1.ppm  test.html
test/data/MinGW/: HgContainer_1.ppm  HgContainer_2.ppm  HgFontTest_1.ppm  HgFontTest_2.ppm
